k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sarif
  labels:
    app.kubernetes.io/name: sarif
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: sarif
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sarif
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
